[package]
name = "tytm"
version = "0.2.4"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
typetag = "0.2.17"

# File system
dirs = "5.0.1"
relative-path = { version = "1.9.3", features = ["serde"] }
tempfile = "3.10.1"
zip = "2.1.6"

# Web access
git2 = "0.19.0"
reqwest = { version = "0.12.5", features = ["blocking"] }

# Else
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
