[package]
name = "tytm"
version = "0.3.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2"

# File system
dirs = "5.0"
relative-path = { version = "1.9", features = ["serde"] }
tempfile = "3.12"
zip = "2.1"

# Web access
git2 = "0.19"
reqwest = { version = "0.12", features = ["blocking"] }

# Else
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
